# reflect

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
lib/: CMakeLists.txt  example.cpp  reflector.h
mock-server/: index.js  openapi.yaml  package.json
ui/: index.html  package.json  vite.config.js
ui/src/: App.vue  api.js  style.css
ui/src/components/: CompositionChart.vue  ConnectionStatus.vue  FrameTimeGraph.vue  FrameTimeRibbon.vue  HotFunctions.vue  InspectPanel.vue  PerformancePanel.vue  PointsPreview.vue  SceneTree.vue  SceneTreeNode.vue  TabBar.vue  TopBar.vue
